feat: add nuxt project

--- a/package.json
+++ b/package.json
@@ -2,26 +2,17 @@
   "version": "0.0.0",
   "name": "n-init",
   "description": "A simple template producer cli for quickly creating projects",
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "main": "./src/index.js",
+  "bin": "./src/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/markthree/n-init.git"
   },
-  "exports": {
-    ".": {
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.mjs",
-      "types": "./dist/index.d.ts"
-    }
-  },
   "files": [
-    "dist"
+    "src",
+    "projects"
   ],
   "scripts": {
-    "build": "unbuild",
-    "prepublishOnly": "pnpm build",
     "release": "bumpp --commit --push --tag && npm publish"
   },
   "keywords": [
@@ -41,8 +32,13 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^18.17.5",
-    "bumpp": "^9.1.1",
-    "typescript": "^5.1.6",
-    "unbuild": "^1.2.1"
+    "bumpp": "^9.1.1"
+  },
+  "dependencies": {
+    "@inquirer/prompts": "^3.0.2",
+    "consola": "^3.2.3",
+    "fast-cpy": "^0.0.8",
+    "fast-glob": "^3.3.1",
+    "kolorist": "^1.8.0"
   }
 }
