--- a/projects/nuxt/package.json
+++ b/projects/nuxt/package.json
@@ -3,6 +3,7 @@
     "dev": "nuxt dev",
     "build": "nuxt build",
     "preview": "nuxt preview",
-    "prepare": "nuxt prepare"
+    "prepare": "nuxt prepare",
+    "generate": "nuxt generate"
   }
 }
